# origo

./: .gitignore  CMakeLists.txt  README.md  gate.conf  main.cc
dep/: .makefile.swp  makefile
dep/ae/: ae.cc  ae.h  ae_epoll  ae_kqueue  ae_select
doc/: c2g.md
src/: base64.h  byte_array.cc  byte_array.h  client.cc  client.h  config.cc  config.h  errors.h  gate.cc  gate.h  location.cc  location.h  logger.cc  logger.h  server.cc  server.h  sha1.h  upstream.cc  upstream.h  upstream_group.cc  upstream_group.h
src/client/: .console_client.cc.swp  console_client.cc  console_client.h  tcp_client.cc  tcp_client.h  telnet_client.cc  telnet_client.h  websocket_client.cc  websocket_client.h
src/encrypt/: base64.cc  sha1.cc
src/handler/: tcp_handler.cc  tcp_handler.h  telnet_handler.cc  telnet_handler.h  websocket_handler.cc  websocket_handler.h
src/upstream/: redis_upstream.cc  redis_upstream.h  sock_upstream.cc  sock_upstream.h  tcp_upstream.cc  tcp_upstream.h
